--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.6",
+        "prettier": "^3.2.4",
+        "prettier-plugin-tailwindcss": "^0.5.11",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
     },
