--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.6",
-        "prettier": "^3.2.4",
-        "prettier-plugin-tailwindcss": "^0.5.11",
+        "prettier": "3.2.5",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "flowbite": "^2.2.1"
+        "flowbite": "^2.2.1",
+        "sweetalert2": "^11.10.5"
     }
 }
